# subtensor

./: .Dockerfile2.swp  .gitignore  Cargo.toml  Dockerfile  Dockerfile2  Dockerfile3  README.md  customSpec.json  customSpecRaw.json  docker-compose.yml  fullspec.json  fullspecraw.json  nakamotospecraw.json  nginx.Dockerfile  nginx.conf  subtensor.conf  validator_akatsuki.json
.devcontainer/: devcontainer.json
.github/workflows/: build-push-template.yml  check.yml
ev/chains/akatsuki_mainnet/db/: 000034.sst  000035.sst  000036.sst  000037.sst  000038.sst  000039.sst  000040.sst  000041.sst  IDENTITY  LOG  MANIFEST-000062  OPTIONS-000060
ev/chains/akatsuki_mainnet/network/: secret_ed25519
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  service.rs
pallets/participate/: Cargo.toml
pallets/subtensor/: Cargo.toml
pallets/subtensor/src/: benchmarking.rs  block_reward.rs  emission.rs  hashing.rs  lib.rs  registration.rs  staking.rs  step.rs  subscribing.rs  weights.rs
pallets/subtensor/tests/: block_reward_tests.rs  emission_tests.rs  hashing.rs  lib.rs  mock.rs  registration.rs  serving.rs  staking.rs  step.rs  subscribing.rs  sudo.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: create_snapshot.sh  create_snapshot_hourly.sh  create_snapshot_nightly.sh  init.sh
specs/: akatsukiSpecRaw.json  nakamotoSpec.json  nakamotoSpecRaw.json  nobunagaSpecRaw.json  subtensorSpec.json  subtensorSpecRaw.json
